[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.46.1"
literal-enum = "0.1.5"
num = { version = "0.4.1", features = ["num-bigint"] }
permutator = "0.4.3"
regex = "1.10.2"

[patch.crates-io]
# permutator = { path = "../permutator" }
